WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310086
[css-anchor-position-1] Media queries may fail to resolve in presence of viewport units and anchors
https://bugs.webkit.org/show_bug.cgi?id=310086
Summary
[css-anchor-position-1] Media queries may fail to resolve in presence of view...
Antti Koivisto
Reported
2026-03-17 01:49:53 PDT
There is a bad interaction.
Attachments
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2026-03-17 01:52:19 PDT
rdar://172385594
Antti Koivisto
Comment 2
2026-03-17 02:11:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60754
EWS
Comment 3
2026-03-18 03:26:32 PDT
Committed
309470@main
(5c614d46912a): <
https://commits.webkit.org/309470@main
> Reviewed commits have been landed. Closing PR #60754 and removing active labels.
EWS
Comment 4
2026-03-24 19:18:43 PDT
Committed
305413.568@safari-7624-branch
(c88860f09d21): <
https://commits.webkit.org/305413.568@safari-7624-branch
> Reviewed commits have been landed. Closing PR #4801 and removing active labels.
Antti Koivisto
Comment 5
2026-03-26 08:45:05 PDT
***
Bug 307984
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug